# attendance_registry

./: README.md
attendance_register/: Cargo.toml
attendance_register/src/: lib.rs
